<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateWorkFragment" >

    <EditText
        android:id="@+id/workName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/piece_name"/>

    <EditText
        android:id="@+id/workDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/description" />

    <TextView
        android:id="@+id/dateSelectedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/date_created_text"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dateSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:text=""
        android:textSize="20sp"/>

    <Button
        android:id="@+id/workDate"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_date" />

    <EditText
        android:id="@+id/artistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:focusable="false"
        />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:padding="7dp"
        android:scaleType="centerInside"
        android:layout_gravity="start"
        android:background="@drawable/image_border"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_gravity="start"
        android:layout_marginBottom="25dp"
        android:text="@string/upload_photo" />

    <Button
        android:id="@+id/createWorkButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/create_piece" />

</LinearLayout>